tests/ui/borrowck/borrowck-loan-blocks-move.stderr
error[E0505]: cannot move out of `v` because it is borrowed
  --> $DIR/borrowck-loan-blocks-move.rs:11:10
   |
LL |     let v = Box::new(3);
   |         - binding `v` declared here
LL |     let w = &v;
   |             -- borrow of `v` occurs here
LL |     take(v);
   |          ^ move out of `v` occurs here
LL |     w.use_ref();
   |     - borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0505`.
